Added new Tomcat Files Config [is01]

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CLB Energy Project</name>
 	<description>CLB new project</description>
+	<packaging>war</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,10 +30,28 @@
 			<artifactId>spring-core</artifactId>
 			<version>5.0.0.RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.2.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<configurationDir>${project.build.directory}/src/main/webapp/conf/server.xml</configurationDir>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
