--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,10 +18,10 @@
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
 	</context-param>
-	<context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>cruze</param-value>
-	</context-param>
+<!-- 	<context-param> -->
+<!-- 		<param-name>primefaces.THEME</param-name> -->
+<!-- 		<param-value>cruze</param-value> -->
+<!-- 	</context-param> -->
 
 	<welcome-file-list>
 		<welcome-file>index.xhtml</welcome-file>
