--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,10 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.0</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.primefaces.themes/dark-hive -->
+		<!-- https://mvnrepository.com/artifact/org.primefaces.themes/midnight -->
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.primefaces.themes</groupId> -->
-<!-- 			<artifactId>cruze</artifactId> -->
+<!-- 			<artifactId>midnight</artifactId> -->
 <!-- 			<version>1.0.10</version> -->
 <!-- 		</dependency> -->
 		<dependency>
