--- a/pom.xml
+++ b/pom.xml
@@ -99,9 +99,14 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.primefaces.extensions</groupId>
+			<artifactId>primefaces-extensions</artifactId>
+			<version>6.2.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>6.0</version>
+			<version>6.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.primefaces.themes/midnight -->
 		<!-- <dependency> -->
