--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,6 @@
 sonar.projectKey=clbprojectSonar
 sonar.projectVersion=1.0
+sonar.sources=src
+sonar.language=java
+sonar.sourceEncoding=UTF-8
 sonar.projectName=ClbProject
