--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectVersion=1.0
 sonar.sources=src
 sonar.language=java
 sonar.sourceEncoding=UTF-8
-sonar.java.binaries=**/target/classes
+sonar.java.binaries=target/classes
 sonar.projectName=ClbProject
