Docker File creation

--- a/src/main/docker/full-compose.yml
+++ b/src/main/docker/full-compose.yml
@@ -83,9 +83,9 @@ services:
               cpus: "0.3"
         ports:
           - "27017:27017"
-        #environment:
-        #    MONGO_INITDB_ROOT_USERNAME: "admin"
-        #    MONGO_INITDB_ROOT_PASSWORD: "123456"
+        environment:
+            MONGO_INITDB_ROOT_USERNAME: "admin"
+            MONGO_INITDB_ROOT_PASSWORD: "123456"
 networks:
   overlay:
 
