Add kubernetes updates

--- a/src/main/kubernetes/clbapp-service.yml
+++ b/src/main/kubernetes/clbapp-service.yml
@@ -4,9 +4,13 @@ metadata:
   name: clbapp-svc
 spec:
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: clbapp-port
     protocol: TCP
+  - name: ftpscript
+    port: 6006
+    targetPort: ftps-port
   selector:
     app: clbapp
   type: LoadBalancer
