Add Test Ignore to Push

--- a/src/main/docker/app-compose.yml
+++ b/src/main/docker/app-compose.yml
@@ -3,8 +3,24 @@ version: "3.2"
 volumes:
   mongodb_data_volume:
     external: true
+  clbapp_volume:
+    external: true
 
 services:
+  clbapp:
+        image: clbproject/clbapp:v1
+        deploy:
+           replicas: 1
+           mode: replicated
+           resources:
+             limits:
+               cpus: "0.3"
+        ports:
+            - "80:80"
+        volumes:
+          - type: volume
+            source: clbapp_volume
+            target: /data/vol
   mongo:
         image: tutum/mongodb:latest
         deploy:
